# stock-report-generator

./: .gitignore  .travis.yml  README.md  create_template.py  gui_app.py  pyproject.toml  requirements.txt  train_lstm.py
.circleci/: config.yml
.github/workflows/: ci.yml
data/: example_000001.xlsx  output_report.docx  sample_report.txt
src/: __init__.py
src/data_source/: __init__.py  akshare_source.py  eastmoney_source.py  sina_source.py
src/excel/: __init__.py  models.py  reader.py  schema.py
src/lstm/: __init__.py  data_processor.py  inference.py  model.py  technical_indicators.py  trainer.py
src/pipeline/: __init__.py  stock_report_pipeline.py
src/report/: __init__.py  formatters.py  generator.py  templates.py
src/template/: __init__.py  docx_template.py  excel_template.py
templates/: 股票分析报告模板.docx
tests/: test_example.py  test_excel.py  test_lstm.py  test_report.py
